<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="blog.globalquality.avalanchequiz.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Q1" />

        <EditText
            android:id="@+id/numberOfAvalanches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="type your answer here"
            android:inputType="number"
            android:paddingTop="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/Q2" />

        <CheckBox
            android:id="@+id/terrainCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A2_1" />

        <CheckBox
            android:id="@+id/treesAndRocksCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A2_2" />

        <CheckBox
            android:id="@+id/snowpackCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A2_3" />

        <CheckBox
            android:id="@+id/weatherCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A2_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorLight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/Q3" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <RadioButton
                android:id="@+id/AvvyYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/AvvyNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="No" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/Q4" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <RadioButton
                android:id="@+id/forecastYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="True" />

            <RadioButton
                android:id="@+id/forecastNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="False" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/Q5" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/minusculeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_1"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/highCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_2"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/moderateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_3"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/extremeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_4"
                android:textSize="12sp" />
        </GridLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/lowCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_5"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/gargantuanCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_6"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/mediumCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_7"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/considerableCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A5_8"
                android:textSize="12sp" />
        </GridLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/Q6" />

            <ToggleButton
                android:id="@+id/considerableToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textOff="False"
                android:textOn="True" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorLight" />

        <Button
            android:id="@+id/scoreQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="scoreQuiz"
            android:paddingTop="8dp"
            android:text="Check Answers" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="8dp"
            android:text="@string/CAIC" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="16dp"
            android:text="avalanche.org" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="16dp"
            android:text="https://www.avalanche.ca/map" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingTop="16dp"
            android:text="https://www.lawis.at/incident/index.php" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="https://www.mountain-forecast.com/" />
    </LinearLayout>
</ScrollView>